[gd_scene load_steps=4 format=3 uid="uid://boss_arena_001"]

[ext_resource type="Script" path="res://world/zones/boss_arena.gd" id="1_arena"]
[ext_resource type="PackedScene" uid="uid://c1kpwx5v8mh5r" path="res://characters/player/player.tscn" id="2_player"]

[sub_resource type="RectangleShape2D" id="wall_shape"]
size = Vector2(384, 20)

[sub_resource type="RectangleShape2D" id="side_wall_shape"]
size = Vector2(20, 216)

[sub_resource type="RectangleShape2D" id="door_shape"]
size = Vector2(60, 20)

[node name="BossArena" type="Node2D"]
script = ExtResource("1_arena")

[node name="Background" type="ColorRect" parent="."]
offset_right = 384.0
offset_bottom = 216.0
color = Color(0.12, 0.1, 0.15, 1)

[node name="ArenaFloor" type="ColorRect" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 354.0
offset_bottom = 186.0
color = Color(0.18, 0.15, 0.22, 1)

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 1

[node name="TopWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(192, 10)
shape = SubResource("wall_shape")

[node name="BottomWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(192, 206)
shape = SubResource("wall_shape")

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(10, 108)
shape = SubResource("side_wall_shape")

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(374, 108)
shape = SubResource("side_wall_shape")

[node name="WallVisuals" type="Node2D" parent="."]

[node name="TopWallVisual" type="ColorRect" parent="WallVisuals"]
offset_right = 384.0
offset_bottom = 20.0
color = Color(0.25, 0.2, 0.3, 1)

[node name="BottomWallVisual" type="ColorRect" parent="WallVisuals"]
offset_top = 196.0
offset_right = 384.0
offset_bottom = 216.0
color = Color(0.25, 0.2, 0.3, 1)

[node name="LeftWallVisual" type="ColorRect" parent="WallVisuals"]
offset_right = 20.0
offset_bottom = 216.0
color = Color(0.25, 0.2, 0.3, 1)

[node name="RightWallVisual" type="ColorRect" parent="WallVisuals"]
offset_left = 364.0
offset_right = 384.0
offset_bottom = 216.0
color = Color(0.25, 0.2, 0.3, 1)

[node name="Doors" type="Node2D" parent="."]

[node name="EntranceDoor" type="StaticBody2D" parent="Doors"]
position = Vector2(192, 200)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/EntranceDoor"]
shape = SubResource("door_shape")

[node name="Visual" type="ColorRect" parent="Doors/EntranceDoor"]
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
color = Color(0.4, 0.3, 0.25, 1)

[node name="ExitBlocker" type="StaticBody2D" parent="Doors"]
position = Vector2(192, 20)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/ExitBlocker"]
shape = SubResource("door_shape")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(192, 170)

[node name="BossSpawnPoint" type="Marker2D" parent="."]
position = Vector2(192, 80)

[node name="PlayerSpawnPoints" type="Node2D" parent="."]

[node name="Default" type="Marker2D" parent="PlayerSpawnPoints"]
position = Vector2(192, 170)

[node name="ArenaDecor" type="Node2D" parent="."]

[node name="Pillar1" type="ColorRect" parent="ArenaDecor"]
offset_left = 60.0
offset_top = 60.0
offset_right = 76.0
offset_bottom = 76.0
color = Color(0.3, 0.25, 0.35, 1)

[node name="Pillar2" type="ColorRect" parent="ArenaDecor"]
offset_left = 308.0
offset_top = 60.0
offset_right = 324.0
offset_bottom = 76.0
color = Color(0.3, 0.25, 0.35, 1)

[node name="Pillar3" type="ColorRect" parent="ArenaDecor"]
offset_left = 60.0
offset_top = 140.0
offset_right = 76.0
offset_bottom = 156.0
color = Color(0.3, 0.25, 0.35, 1)

[node name="Pillar4" type="ColorRect" parent="ArenaDecor"]
offset_left = 308.0
offset_top = 140.0
offset_right = 324.0
offset_bottom = 156.0
color = Color(0.3, 0.25, 0.35, 1)
